<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainScrollView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.quizzapp.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/logo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginRight="40dp"
            android:src="@drawable/cglogo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_centerHorizontal="true"
            android:text="MCQ ON C PROGRAMMING"
            android:textColor="#000000"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/quizBody"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/questionOne" />

            <RadioGroup
                android:id="@+id/groupOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionOneA" />

                <RadioButton
                    android:id="@+id/answerOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionOneB" />


            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/questionTwo" />

            <RadioGroup
                android:id="@+id/groupTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionTwoA" />

                <RadioButton
                    android:id="@+id/answerTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionTwoB" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionTwoC" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/questionThree" />

            <RadioGroup
                android:id="@+id/groupThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <RadioButton
                    android:id="@+id/answerThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionThreeA" />

                <RadioButton

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionThreeB" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionThreeC" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/questionFour" />

            <RadioGroup
                android:id="@+id/groupFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <RadioButton
                    android:id="@+id/answerFour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionFourA" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionFourB" />


            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/questionFive" />

            <RadioGroup
                android:id="@+id/groupFive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionFiveA" />

                <RadioButton
                    android:id="@+id/answerFive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionFiveB" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionFiveC" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/questionSix" />

            <EditText
                android:id="@+id/answerSix"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:hint="EX:- 1995"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/questionSeven" />

            <RadioGroup
                android:id="@+id/groupSeven"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionSevenA" />

                <RadioButton
                    android:id="@+id/answerSeven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionSevenB" />

                <RadioButton

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionSevenC" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"

                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/questionEight" />

            <RadioGroup
                android:id="@+id/groupEight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <RadioButton

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionEightA" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionEightB" />

                <RadioButton
                    android:id="@+id/answerEight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionEightC" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"

                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/questionNine" />

            <RadioGroup
                android:id="@+id/groupNine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionNineA" />

                <RadioButton
                    android:id="@+id/answerNine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionNineB" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionNineC" />
            </RadioGroup>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/questionTen" />

            <RadioGroup
                android:id="@+id/groupTen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp">

                <CheckBox
                    android:id="@+id/answerTen1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionTenA" />

                <CheckBox
                    android:id="@+id/answerTen3"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionTenB" />

                <CheckBox
                    android:id="@+id/answerTen2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="@string/questionTenC" />


            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/answerResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="20dp"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/answerResult"
                    android:layout_centerHorizontal="true"
                    android:layout_marginBottom="40dp"
                    android:background="@color/colorPrimary"
                    android:onClick="getResults"
                    android:text="RESULT"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp" />
            </RelativeLayout>

        </LinearLayout>


    </RelativeLayout>
</ScrollView>